language/move-lang/tests/move_check/locals/use_before_assign_if_else.exp
error: 

   ┌── tests/move_check/locals/use_before_assign_if_else.move:3:13 ───
   │
 3 │         let x: u64;
   │             - The local might not have a value due to this position. The local must be assigned a value before being used
 4 │         if (cond) { } else { x = 0 };
 5 │         let _ = move x + 1;
   │                 ^^^^^^ Invalid usage of local 'x'
   │

error: 

    ┌── tests/move_check/locals/use_before_assign_if_else.move:9:13 ───
    │
  9 │         let x: u64;
    │             - The local might not have a value due to this position. The local must be assigned a value before being used
 10 │         if (cond) { } else { x = 0 };
 11 │         let _ = move x + 1;
    │                 ^^^^^^ Invalid usage of local 'x'
    │

error: 

    ┌── tests/move_check/locals/use_before_assign_if_else.move:15:13 ───
    │
 15 │         let x: u64;
    │             - The local might not have a value due to this position. The local must be assigned a value before being used
 16 │         if (cond) { } else { x = 0 };
 17 │         let _ = move x + 1;
    │                 ^^^^^^ Invalid usage of local 'x'
    │

